// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform legacyTransformFindResponseToExternalModel external references populates the external references attributes 1`] = `
Object {
  "page": 1,
  "per_page": 1,
  "saved_objects": Array [
    Object {
      "attributes": Object {
        "action": "create",
        "action_id": "100",
        "case_id": "1",
        "comment_id": "external-reference-test-id",
        "created_at": "abc",
        "created_by": Object {
          "email": "a",
          "full_name": "abc",
          "username": "b",
        },
        "owner": "securitySolution",
        "payload": Object {
          "comment": Object {
            "externalReferenceAttachmentTypeId": ".test",
            "externalReferenceId": "my-id",
            "externalReferenceMetadata": null,
            "externalReferenceStorage": Object {
              "soType": "test-so",
              "type": "savedObject",
            },
            "owner": "securitySolution",
            "type": "externalReference",
          },
        },
        "type": "comment",
      },
      "id": "100",
      "references": Array [
        Object {
          "id": "my-id",
          "name": "externalReferenceId",
          "type": "test-so",
        },
        Object {
          "id": "1",
          "name": "associated-cases",
          "type": "cases",
        },
        Object {
          "id": "external-reference-test-id",
          "name": "associated-cases-comments",
          "type": "cases-comments",
        },
      ],
      "score": 0,
      "type": "cases-user-actions",
    },
  ],
  "total": 1,
}
`;

exports[`transform legacyTransformFindResponseToExternalModel persistable state attachments populates the persistable state 1`] = `
Object {
  "page": 1,
  "per_page": 1,
  "saved_objects": Array [
    Object {
      "attributes": Object {
        "action": "create",
        "action_id": "100",
        "case_id": "1",
        "comment_id": "persistable-state-test-id",
        "created_at": "abc",
        "created_by": Object {
          "email": "a",
          "full_name": "abc",
          "username": "b",
        },
        "owner": "securitySolution",
        "payload": Object {
          "comment": Object {
            "owner": "securitySolutionFixture",
            "persistableStateAttachmentState": Object {
              "foo": "foo",
              "injectedId": "testRef",
            },
            "persistableStateAttachmentTypeId": ".test",
            "type": "persistableState",
          },
        },
        "type": "comment",
      },
      "id": "100",
      "references": Array [
        Object {
          "id": "testRef",
          "name": "myTestReference",
          "type": "test-so",
        },
        Object {
          "id": "1",
          "name": "associated-cases",
          "type": "cases",
        },
        Object {
          "id": "persistable-state-test-id",
          "name": "associated-cases-comments",
          "type": "cases-comments",
        },
      ],
      "score": 0,
      "type": "cases-user-actions",
    },
  ],
  "total": 1,
}
`;

exports[`transform legacyTransformFindResponseToExternalModel preserves the saved object fields and attributes when inject the ids 1`] = `
Object {
  "page": 1,
  "per_page": 1,
  "saved_objects": Array [
    Object {
      "attributes": Object {
        "action": "create",
        "action_id": "100",
        "case_id": "1",
        "comment_id": null,
        "created_at": "abc",
        "created_by": Object {
          "email": "a",
          "full_name": "abc",
          "username": "b",
        },
        "owner": "securitySolution",
        "payload": Object {
          "connector": Object {
            "fields": Object {
              "issueType": "bug",
              "parent": "2",
              "priority": "high",
            },
            "id": "1",
            "name": ".jira",
            "type": ".jira",
          },
        },
        "type": "connector",
      },
      "id": "100",
      "references": Array [
        Object {
          "id": "1",
          "name": "associated-cases",
          "type": "cases",
        },
        Object {
          "id": "1",
          "name": "connectorId",
          "type": "action",
        },
      ],
      "score": 0,
      "type": "cases-user-actions",
    },
  ],
  "total": 1,
}
`;

exports[`transform transformFindResponseToExternalModel external references populates the external references attributes 1`] = `
Object {
  "page": 1,
  "per_page": 1,
  "saved_objects": Array [
    Object {
      "attributes": Object {
        "action": "create",
        "comment_id": "external-reference-test-id",
        "created_at": "abc",
        "created_by": Object {
          "email": "a",
          "full_name": "abc",
          "username": "b",
        },
        "owner": "securitySolution",
        "payload": Object {
          "comment": Object {
            "externalReferenceAttachmentTypeId": ".test",
            "externalReferenceId": "my-id",
            "externalReferenceMetadata": null,
            "externalReferenceStorage": Object {
              "soType": "test-so",
              "type": "savedObject",
            },
            "owner": "securitySolution",
            "type": "externalReference",
          },
        },
        "type": "comment",
      },
      "id": "100",
      "references": Array [
        Object {
          "id": "my-id",
          "name": "externalReferenceId",
          "type": "test-so",
        },
        Object {
          "id": "1",
          "name": "associated-cases",
          "type": "cases",
        },
        Object {
          "id": "external-reference-test-id",
          "name": "associated-cases-comments",
          "type": "cases-comments",
        },
      ],
      "score": 0,
      "type": "cases-user-actions",
    },
  ],
  "total": 1,
}
`;

exports[`transform transformFindResponseToExternalModel persistable state attachments populates the persistable state 1`] = `
Object {
  "page": 1,
  "per_page": 1,
  "saved_objects": Array [
    Object {
      "attributes": Object {
        "action": "create",
        "comment_id": "persistable-state-test-id",
        "created_at": "abc",
        "created_by": Object {
          "email": "a",
          "full_name": "abc",
          "username": "b",
        },
        "owner": "securitySolution",
        "payload": Object {
          "comment": Object {
            "owner": "securitySolutionFixture",
            "persistableStateAttachmentState": Object {
              "foo": "foo",
              "injectedId": "testRef",
            },
            "persistableStateAttachmentTypeId": ".test",
            "type": "persistableState",
          },
        },
        "type": "comment",
      },
      "id": "100",
      "references": Array [
        Object {
          "id": "testRef",
          "name": "myTestReference",
          "type": "test-so",
        },
        Object {
          "id": "1",
          "name": "associated-cases",
          "type": "cases",
        },
        Object {
          "id": "persistable-state-test-id",
          "name": "associated-cases-comments",
          "type": "cases-comments",
        },
      ],
      "score": 0,
      "type": "cases-user-actions",
    },
  ],
  "total": 1,
}
`;

exports[`transform transformFindResponseToExternalModel preserves the saved object fields and attributes when inject the ids 1`] = `
Object {
  "page": 1,
  "per_page": 1,
  "saved_objects": Array [
    Object {
      "attributes": Object {
        "action": "create",
        "comment_id": null,
        "created_at": "abc",
        "created_by": Object {
          "email": "a",
          "full_name": "abc",
          "username": "b",
        },
        "owner": "securitySolution",
        "payload": Object {
          "connector": Object {
            "fields": Object {
              "issueType": "bug",
              "parent": "2",
              "priority": "high",
            },
            "id": "1",
            "name": ".jira",
            "type": ".jira",
          },
        },
        "type": "connector",
      },
      "id": "100",
      "references": Array [
        Object {
          "id": "1",
          "name": "associated-cases",
          "type": "cases",
        },
        Object {
          "id": "1",
          "name": "connectorId",
          "type": "action",
        },
      ],
      "score": 0,
      "type": "cases-user-actions",
    },
  ],
  "total": 1,
}
`;
